      the variables used for safe prediction from the fit.
      
      \item Functions such as \code{parLapply()} in package
      \pkg{parallel} can make use of a default cluster if one is set.
      (Reported by Martin Morgan.)
      
      \item \code{chol(pivot = TRUE, LINPACK = FALSE)} is now available
      using LAPACK 3.2 subroutine \code{DPSTRF}.
    }
  }

  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
      \item \code{array()} is now implemented in C code (for speed) when
      \code{data} is atomic or an unclassed list (so it is known that
      \code{as.vector(data)} will have no class to be used by \code{rep()}).
      
      \item \code{rep()} is faster and uses less memory,
      substantially so in some common cases (e.g. if \code{times} is of
      length one or \code{length.out} is given, and \code{each = 1}).
      
      \item \code{findInterval()}, \code{tabulate()}, \code{cut()},
      \code{hist()} and \code{image.default()} all use \code{.Call()}
      and are more efficient.
      
      \item \code{duplicated()}, \code{unique()} and similar now
      support vectors of lengths above \eqn{2^{29}}{2^29} on 64-bit
      platforms.
      
      \item Omitting \code{PACKAGE} in \code{.C()} etc calls was
      supposed to make use of the DLL from the namespace within which
      the enclosing function was defined.  It was less successful in
      doing so than it might be, and gave no indication it had failed.

      A new search strategy is very successful and gives a warning
      when it fails.  In most cases this is because the entry point is
      not actually provided by that package (and so \code{PACKAGE}
      should be used to indicate which package is intended) but in some
      the namespace does not have a DLL specified by a
      \code{useDynLib()} directive so \code{PACKAGE} is required.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now checks if a package can be loaded